--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^0.5.0-beta4",
     "interact.js": "^1.2.8",
     "jspdf": "^1.3.5",
+    "lodash": "^4.17.4",
     "vue": "^2.5.2"
   },
   "devDependencies": {
