--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "html2canvas": "^0.5.0-beta4",
     "interact.js": "^1.2.8",
     "jspdf": "^1.3.5",
